# smart-inspection-edge-platform

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: common.yaml  padim.yaml  stfpm.yaml
